force-app/main/default/objects/Partner_Info_Settings__c/Partner_Info_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Partner Info Settings</label>
</CustomObject>