force-app/main/default/objects/Partner_Info_Settings__c/fields/Email_List_2__c.field-meta.xml
<CustomField>
    <fullName>Email_List_2__c</fullName>
    <label>Email List 2</label>
    <type>Email</type>
</CustomField>