force-app/main/default/objects/Partner_Info_Settings__c/fields/Email_List_6__c.field-meta.xml
<CustomField>
    <fullName>Email_List_6__c</fullName>
    <label>Email List 6</label>
    <type>Email</type>
</CustomField>