force-app/main/default/objects/Partner_Info_Settings__c/fields/Email_List_NSW__c.field-meta.xml
<CustomField>
    <fullName>Email_List_NSW__c</fullName>
    <label>Email List NSW</label>
    <type>Email</type>
</CustomField>