force-app/main/default/objects/Partner_Info_Settings__c/fields/Email_List_VIC__c.field-meta.xml
<CustomField>
    <fullName>Email_List_VIC__c</fullName>
    <label>Email List VIC</label>
    <type>Email</type>
</CustomField>