force-app/main/default/objects/Partner_Info_Settings__c/fields/Level_3_Approval_Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Approval_Annual_Amount__c</fullName>
    <defaultValue>100000</defaultValue>
    <description>Minimum Annual Amount on Partner Addendum, for Level 3 Approval on Licence</description>
    <label>Level 3 Approval Annual Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>