force-app/main/default/objects/Partner_Info_Settings__c/fields/Level_3_Approval_Repayment_Term__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Approval_Repayment_Term__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Minimum Repayment Term on Partner Addendum for Level 3 Approval on Licence</description>
    <label>Level 3 Approval Repayment Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>