force-app/main/default/objects/Partner_Info_Settings__c/fields/Third_Reminder_Days__c.field-meta.xml
<CustomField>
    <fullName>Third_Reminder_Days__c</fullName>
    <label>Third Reminder Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>